Restore rose, EVA GPS (EVA lights fix this: soon)

--- a/Resources/Prototypes/_NF/Catalog/Fills/Lockers/suit_storage.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Lockers/suit_storage.yml
@@ -190,6 +190,7 @@
         - id: ClothingOuterHardsuitLuxury
         - id: ClothingMaskGasExplorer
         - id: JetpackMiniFilled
+        - id: HandheldGPSBasic
   - type: AccessReader
 
 #Mining hardsuit
@@ -205,6 +206,7 @@
         - id: ClothingOuterHardsuitSalvage
         - id: ClothingMaskGasExplorer
         - id: JetpackMiniFilled
+        - id: HandheldGPSBasic
   - type: AccessReader
 
 #Mercenary hardsuit
@@ -219,6 +221,7 @@
         - id: ClothingOuterHardsuitMercenary
         - id: ClothingMaskGasMercenary
         - id: JetpackMiniFilled
+        - id: HandheldGPSBasic
 #        - id: ClothingShoesBootsMagMercenaryFilled # Frontier - Not adding this to the suit storage so it wont be abused, exists only on role spawn.
   - type: AccessReader
     access: [["Captain"], ["Mercenary"]]
@@ -234,6 +237,7 @@
         - id: ClothingOuterHardsuitPrivateSecurity
         - id: ClothingMaskGasSecurity
         - id: JetpackMiniFilled
+        - id: HandheldGPSBasic
 #        - id: ClothingShoesBootsMagCombat # Frontier - Not adding this to the suit storage so it wont be abused, exists only on role spawn.
   - type: AccessReader
     access: [["Captain"], ["Mercenary"]]
@@ -250,6 +254,7 @@
         - id: ClothingOuterHardsuitScaf
         - id: ClothingMaskGasMercenary
         - id: JetpackMiniFilled
+        - id: HandheldGPSBasic
 #        - id: ClothingShoesBootsMagMercenaryFilled # Frontier - Not adding this to the suit storage so it wont be abused, exists only on role spawn.
   - type: AccessReader
     access: [["Captain"], ["Mercenary"]]
@@ -266,6 +271,7 @@
         - id: ClothingOuterHardsuitPilot
         - id: ClothingMaskBreath
         - id: JetpackMiniFilled
+        - id: HandheldGPSBasic
   - type: AccessReader
 
 #Clown hardsuit
@@ -280,6 +286,7 @@
         - id: ClothingOuterHardsuitClown
         - id: ClothingMaskBreath
         - id: JetpackMiniFilled
+        - id: HandheldGPSBasic
   - type: AccessReader
 
 #Cadet hardsuit
@@ -294,6 +301,7 @@
         - id: ClothingOuterHardsuitNfsdBronze # Frontier
         - id: ClothingMaskGasNfsd
         - id: JetpackNfsdFilled
+        - id: HandheldGPSBasic
         - id: ClothingShoesBootsMagNfsd # Frontier
   - type: AccessReader
     access: [["Security"]]
@@ -310,6 +318,7 @@
         - id: ClothingOuterHardsuitNfsdSilver # Frontier
         - id: ClothingMaskGasNfsd 
         - id: JetpackNfsdFilled
+        - id: HandheldGPSBasic
         - id: ClothingShoesBootsMagNfsd # Frontier
   - type: AccessReader
     access: [["Security"]]
@@ -326,6 +335,7 @@
         - id: ClothingOuterHardsuitNfsdBrigmedic # Frontier
         - id: ClothingMaskGasNfsd 
         - id: JetpackNfsdFilled
+        - id: HandheldGPSBasic
         - id: ClothingShoesBootsMagNfsd # Frontier
   - type: AccessReader
     access: [["Security"]]
@@ -342,6 +352,7 @@
         - id: ClothingOuterHardsuitNfsdGold # Frontier
         - id: ClothingMaskGasNfsd 
         - id: JetpackNfsdFilled
+        - id: HandheldGPSBasic
         - id: ClothingShoesBootsMagNfsd # Frontier
   - type: AccessReader
     access: [["Security"]]
@@ -358,6 +369,7 @@
         - id: ClothingOuterHardsuitNfsdGold # Frontier
         - id: ClothingMaskGasNfsd 
         - id: JetpackNfsdFilled
+        - id: HandheldGPSBasic
         - id: ClothingShoesBootsMagNfsd # Frontier
   - type: AccessReader
     access: [["Security"]]
@@ -374,6 +386,7 @@
         - id: ClothingOuterHardsuitNfsdSheriff # Frontier
         - id: ClothingMaskGasSheriff
         - id: JetpackNfsdFilled
+        - id: HandheldGPSBasic
         - id: ClothingShoesBootsMagNfsd # Frontier
   - type: AccessReader
     access: [["Security"]]
@@ -390,6 +403,7 @@
         - id: ClothingOuterHardsuitNfsdCombat # Frontier
         - id: ClothingMaskGasNfsd 
         - id: JetpackNfsdFilled
+        - id: HandheldGPSBasic
         - id: ClothingShoesBootsMagNfsd # Frontier
   - type: AccessReader
     access: [["Security"]]
@@ -406,6 +420,7 @@
         - id: ClothingOuterHardsuitNfsdCommand # Frontier
         - id: ClothingMaskGasNfsd 
         - id: JetpackNfsdFilled
+        - id: HandheldGPSBasic
         - id: ClothingShoesBootsMagNfsd # Frontier
   - type: AccessReader
     access: [["Security"]]
