--- a/Resources/Prototypes/_NF/Catalog/Fills/StorageFillTemplates/departmental_eva.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/StorageFillTemplates/departmental_eva.yml
@@ -10,6 +10,7 @@
     - id: ClothingOuterEVASuitContractor
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -23,6 +24,7 @@
     - id: ClothingOuterEVASuitPilot
     - id: ClothingMaskPilot
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -36,6 +38,7 @@
     - id: ClothingOuterEVASuitSr
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -49,6 +52,7 @@
     - id: ClothingOuterEVASuitCaptain
     - id: ClothingMaskGasCaptain
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -62,6 +66,7 @@
     - id: ClothingOuterEVASuitEngineer
     - id: ClothingMaskGas
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -75,6 +80,7 @@
     - id: ClothingOuterEVASuitAtmosTech
     - id: ClothingMaskGasAtmos
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -88,6 +94,7 @@
     - id: ClothingOuterEVASuitCargo
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -102,6 +109,7 @@
     - id: ClothingMaskGasExplorer
     - id: JetpackMiniFilled
     - id: FlashlightLantern
+    - id: HandheldGPSBasic
     - id: ClothingShoesBootsMag
 
 - type: entity
@@ -115,6 +123,7 @@
     - id: ClothingOuterEVASuitMedic
     - id: ClothingMaskBreathMedical
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -128,6 +137,7 @@
     - id: ClothingOuterHardsuitVoidParamed
     - id: ClothingMaskBreathMedical
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -141,6 +151,7 @@
     - id: ClothingOuterEVASuitScientist
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -154,6 +165,7 @@
     - id: ClothingOuterEVASuitJanitor
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -167,6 +179,7 @@
     - id: ClothingOuterEVASuitServiceWorker
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -180,6 +193,7 @@
     - id: ClothingOuterEVASuitChaplain
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: Lantern
 
 - type: entity
@@ -193,6 +207,7 @@
     - id: ClothingOuterEVASuitBoxerRed
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: ClothingHandsGlovesBoxingRed
     - id: ShardCrystalRed
 
@@ -207,6 +222,7 @@
     - id: ClothingOuterEVASuitBoxerGreen
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: ClothingHandsGlovesBoxingGreen
     - id: ShardCrystalGreen
 
@@ -221,6 +237,7 @@
     - id: ClothingOuterEVASuitBoxerBlue
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: ClothingHandsGlovesBoxingBlue
     - id: ShardCrystalBlue
 
@@ -235,6 +252,7 @@
     - id: ClothingOuterEVASuitBoxerYellow
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: ClothingHandsGlovesBoxingYellow
     - id: ShardCrystalOrange
 
@@ -249,6 +267,7 @@
     - id: ClothingOuterEVASuitBoxerRandom
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: ClothingHandsGlovesBoxingBlue
     - id: ShardCrystalBlue
 
@@ -263,6 +282,7 @@
     - id: ClothingOuterEVASuitHydro
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -276,6 +296,7 @@
     - id: ClothingOuterEVASuitMailman
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 - type: entity
@@ -289,6 +310,7 @@
     - id: ClothingOuterEVASuitMercenary
     - id: ClothingMaskGasMercenary
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightSeclite
 
 - type: entity
@@ -302,6 +324,7 @@
     - id: ClothingOuterEVASuitPrivateSec
     - id: ClothingMaskGasSecurity
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightSeclite
 
 - type: entity
@@ -315,6 +338,7 @@
     - id: ClothingOuterEVASuitNfsd
     - id: ClothingMaskGasNfsd
     - id: JetpackNfsdFilled
+    - id: HandheldGPSBasic
     - id: FlashlightNfsdLite
 
 # Other EVA Suits
@@ -329,6 +353,7 @@
     - id: ClothingOuterEVASuitGoblin
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: Lantern
 
 # Emergency
@@ -343,6 +368,7 @@
     - id: ClothingOuterSuitEmergency
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
 
 # Player factions
@@ -357,4 +383,5 @@
     - id: ClothingOuterEVASuitLvhi
     - id: ClothingMaskBreath
     - id: JetpackMiniFilled
+    - id: HandheldGPSBasic
     - id: FlashlightLantern
