Restore GPS to locker fills, GridFill comment

--- a/Resources/Prototypes/Catalog/Fills/Lockers/cargo.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/cargo.yml
@@ -8,6 +8,7 @@
     - id: ClothingOuterHardsuitSpatio
     - id: ClothingMaskGasExplorer
     - id: JetpackMiniFilled # Frontier
+    - id: HandheldGPSBasic # Frontier
 
 - type: entityTable
   id: LockerFillSalvageSpecialist
