--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -72,6 +72,7 @@
 #    - id: OxygenTankFilled # Frontier
     - id: AirTankFilled # Frontier
     - id: JetpackMiniFilled # Frontier
+    - id: HandheldGPSBasic # Frontier
 
 # No laser locker, used when the antique laser is placed in the special display crate
 - type: entity
@@ -181,6 +182,7 @@
 #    - id: OxygenTankFilled # Frontier
     - id: AirTankFilled # Frontier
     - id: JetpackMiniFilled # Frontier
+    - id: HandheldGPSBasic # Frontier
 
 # No hardsuit locker
 - type: entity
@@ -239,6 +241,7 @@
 #    - id: OxygenTankFilled # Frontier
     - id: AirTankFilled # Frontier
     - id: JetpackMiniFilled # Frontier
+    - id: HandheldGPSBasic # Frontier
 
 # No hardsuit locker
 - type: entity
@@ -291,6 +294,7 @@
 #    - id: OxygenTankFilled # Frontier
     - id: AirTankFilled # Frontier
     - id: JetpackMiniFilled # Frontier
+    - id: HandheldGPSBasic # Frontier
 
 # No hardsuit locker
 - type: entity
@@ -360,6 +364,7 @@
     - id: JetpackSecurityFilled
 #    - id: OxygenTankFilled # Frontier
     - id: AirTankFilled # Frontier
+    - id: HandheldGPSBasic # Frontier
     - id: ClothingShoesBootsMagCombatFilled # Frontier
 
 # No hardsuit locker
