--- a/Resources/Prototypes/Catalog/Fills/Lockers/suit_storage.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/suit_storage.yml
@@ -14,6 +14,7 @@
         - id: ClothingHeadHelmetEVA
         - id: ClothingMaskBreath
         - id: JetpackMiniFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
 
 #Basic EVA (Big Ass Helmet)
 - type: entity
@@ -30,6 +31,7 @@
         - id: ClothingHeadHelmetEVALarge
         - id: ClothingMaskBreath
         - id: JetpackMiniFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
 
 #Emergency EVA
 - type: entity
@@ -45,6 +47,7 @@
         - id: ClothingOuterSuitEmergency
         - id: ClothingMaskBreath
         - id: JetpackMiniFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
 
 #Prisoner EVA
 - type: entity
@@ -75,6 +78,7 @@
         - id: ClothingHeadHelmetSyndicate
         - id: ClothingMaskGasSyndicate
         - id: JetpackBlackFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
 
 #Pirate EVA
 - type: entity
@@ -91,6 +95,7 @@
         - id: ClothingMaskGas
         - id: JetpackBlackFilled # Frontier
         - id: ClothingShoesBootsMagPirateFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
 
 #NTSRA Voidsuit
 - type: entity
@@ -108,6 +113,7 @@
         - id: ClothingHeadHelmetAncient
         - id: ClothingMaskBreath
         - id: JetpackMiniFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
 
 #HARDSUITS
 #Basic hardsuit
@@ -124,6 +130,7 @@
         - id: ClothingOuterHardsuitBasic
         - id: ClothingMaskBreath
         - id: JetpackMiniFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
 
 #Engineering hardsuit
 - type: entity
@@ -140,6 +147,7 @@
         - id: ClothingOuterHardsuitEngineering
         - id: ClothingMaskBreath
         - id: JetpackMiniFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
   - type: AccessReader
     # access: [["Engineering"]] # Frontier
 
@@ -157,6 +165,7 @@
         - id: ClothingOuterHardsuitAtmos
         - id: ClothingMaskBreath
         - id: JetpackMiniFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
   - type: AccessReader
     # access: [["Atmospherics"]] # Frontier
 
@@ -174,6 +183,7 @@
         - id: ClothingOuterHardsuitSecurity
         - id: ClothingMaskBreath
         - id: JetpackSecurityFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
         - id: ClothingShoesBootsMagCombatFilled # Frontier
   - type: AccessReader
     access: [["Security"]]
@@ -244,6 +254,7 @@
         - id: ClothingOuterHardsuitWarden
         - id: ClothingMaskBreath
         - id: JetpackSecurityFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
         - id: ClothingShoesBootsMagCombatFilled # Frontier
   - type: AccessReader
     access: [["Armory"]]
@@ -289,6 +300,7 @@
         - id: ClothingShoesBootsMagSyndie
         - id: ClothingMaskGasSyndicate
         - id: JetpackBlackFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
 
 #Pirate Captain's hardsuit
 - type: entity
@@ -305,6 +317,7 @@
         - id: ClothingMaskGas
         - id: ClothingNeckCloakPirateCap # Frontier
         - id: JetpackBlackFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
         - id: ClothingShoesBootsMagPirateFilled # Frontier
 
 #Wizard
@@ -321,3 +334,4 @@
         - id: ClothingOuterHardsuitWizard
         - id: ClothingMaskBreath
         - id: JetpackBlackFilled # Frontier
+        - id: HandheldGPSBasic # Frontier
