--- a/Resources/Prototypes/_NF/Entities/Clothing/Back/base_clothing_backpack.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Back/base_clothing_backpack.yml
@@ -28,3 +28,26 @@
     size: Huge
     shape:
     - 0,0,7,5
+
+- type: entity
+  abstract: true
+  parent: NFClothingBackpack
+  id: NFClothingMessenger
+  components:  
+  ## One 4x4 pocket, four 2x2 pockets
+  - type: Storage
+    grid:
+    - 0,0,1,1
+    - 0,3,1,4
+    - 3,0,6,3
+    - 8,0,9,1
+    - 8,3,9,4
+
+  # Alternative layouts
+  ## Two 2x1 pockets, one 2x3 pocket and one 6x3 pocket
+  # - type: Storage
+    # grid:
+    # - 0,0,1,2
+    # - 3,0,8,2
+    # - 10,0,11,0
+    # - 10,2,11,2
