Restore cargo order tabletop computer

--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/computer.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/computer.yml
@@ -99,6 +99,8 @@
     - type: Tag
       tags:
       - DroneUsable
+    - type: ComputerTabletopBoard # Frontier
+      prototype: ComputerTabletopCargoOrders # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
