Big bug fixing part 1 (#2161)
* Based on DeltaV changes

* Update build-test-debug.yml

* Public Transit: check for valid stations

* Run tests with C# changes only

* frontier->nf, shipyard test workflow

* Remove HandheldGPSBasic to fix fills overflow

* Fix ultimate clown shoes node

* Update sparrow.yml

* Update DeepFryer to Delta-V's

* reorder filter arg for shipyard tests

* Fixups

* Boards

* ATM fixes, inflatable wall stack price

* test ignores & smaller fixes

* Update SuicideCommandTests.cs

* Update caduceus.yml

* Update caduceus.yml

* fix crescent invalid entity refs

* machine board, map load test fixes

* Update AutoInternalsTests.cs

* disciple appraisal margin

* Update computer.yml

* altars steel yield

* revert bank atm slot, update-credits, no NFDev tst

* DeadDropSystem: check lifecycle in compromise

* Update PostMapInitTest.cs

* Make arcadia winter coat inherit from ClothingOUterWinterCoatToggleable

* Update PostMapInitTest.cs

* Cleanup

* Set static physics on BaseStructureDisable{ToolUse,Anchoring}

* Update PostMapInitTest.cs

* Update PostMapInitTest.cs

* Update caduceus.yml

* EntityTest: add desc

* nullable pirate bounty whitelists

* Value fixes

* Various YAML fixes

* Fix portable generators

* Cleanup

* Cleanup

* Update JobTest.cs

* Fixup

* Update softsuits.yml

* Update computer.yml

* Update virology_lab.yml

* Update bocadillo.yml

* Fixups

* Update JobTest.cs

* Update build-test-debug.yml

* DeepFryer safety, remove most arbitrage, bk2ships

* Revert most test changes, left TODOs where approp.

* BaseWallmount: push into BaseStructureWallmount

* Restore rose, EVA GPS (EVA lights fix this: soon)

* Restore GPS to locker fills, GridFill comment

* Cleanup: chair arbitrage, dept. EVA GPS

* Restore GPS order

* Restore cargo order tabletop computer

* Revert GPS order, this time, working

---------


--- a/Resources/Prototypes/Entities/Objects/Misc/fluff_lights.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/fluff_lights.yml
@@ -289,5 +289,5 @@
         - MachineMask
         layer:
         - MachineLayer
-  - type: StaticPrice
-    price: 3
+  - type: StaticPrice # Frontier
+    price: 3 # Frontier: TODO - tests at 6
