--- a/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
@@ -4,8 +4,8 @@
   parent:
   - ClothingOuterStorageBase # Added pockets to make this suit somewhat viable alternative to hardsuits
   - ClothingOuterEVASuitBase
-  - GeigerCounterClothing
-  id: ClothingOuterEVASuitBaseNF
+  - ClothingOuterHardsuitBase
+  id: NFClothingOuterEVASuitBase
   components:
   - type: Item
     shape:
@@ -30,7 +30,7 @@
 
 # DEPARTMENTAL
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitHydro
   name: botanist EVA suit
   description: An EVA suit with a built-in helmet commonly issued to hydroponics workers.
@@ -47,7 +47,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitMailman
   name: mailcarrier EVA suit
   description: An EVA suit with a built-in helmet commonly issued to hydroponics workers.
@@ -66,7 +66,7 @@
 # COLORED DEPARTMENTAL
 ## CONTRACTORS
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitContractor
   name: contractor EVA suit
   description: An EVA suit with a built-in helmet commonly issued to contractors.
@@ -119,7 +119,7 @@
 
 ## COMMAND
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitSr
   name: station representative EVA suit
   description: An EVA suit with a built-in helmet commonly issued to station representatives.
@@ -171,7 +171,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitCaptain
   name: captain EVA suit
   description: An EVA suit with a built-in helmet commonly issued to captains.
@@ -224,7 +224,7 @@
 
 ## ENGINEERING
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitEngineer
   name: engineer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to engineers.
@@ -276,7 +276,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitAtmosTech
   name: atmospheric technician EVA suit
   description: An EVA suit with a built-in helmet commonly issued to atmospheric technicians.
@@ -329,7 +329,7 @@
 
 ## SUPPLY
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitCargo
   name: cargo technician EVA suit
   description: An EVA suit with a built-in helmet commonly issued to cargo technicians.
@@ -381,7 +381,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitSalvage
   name: salvage specialist EVA suit
   description: An EVA suit with a built-in helmet commonly issued to salvage specialists.
@@ -434,7 +434,7 @@
 
 ## MEDICAL
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitMedic
   name: medical specialist EVA suit
   description: An EVA suit with a built-in helmet commonly issued to medical specialists.
@@ -487,7 +487,7 @@
 
 ## SCIENCE
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitScientist
   name: scientist EVA suit
   description: An EVA suit with a built-in helmet commonly issued to scientists.
@@ -540,7 +540,7 @@
 
 ## SERVICE
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitJanitor
   name: janitor EVA suit
   description: An EVA suit with a built-in helmet commonly issued to janitors.
@@ -592,7 +592,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitServiceWorker
   name: service worker EVA suit
   description: An EVA suit with a built-in helmet commonly issued to service workers.
@@ -644,7 +644,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitChaplain
   name: chaplain EVA suit
   description: An EVA suit with a built-in helmet commonly issued to chaplains.
@@ -697,7 +697,7 @@
 
 ## Boxing
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitBoxerRed
   name: boxer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to boxers in the red corner.
@@ -749,7 +749,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitBoxerGreen
   name: boxer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to boxers in the green corner.
@@ -801,7 +801,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitBoxerBlue
   name: boxer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to boxers in the blue corner.
@@ -853,7 +853,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitBoxerYellow
   name: boxer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to boxers in the yellow corner.
@@ -905,7 +905,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitBoxerRandom
   name: boxer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to boxers in the random corner.
@@ -960,7 +960,7 @@
 
 ## WILDCARDS
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitPilot
   name: pilot EVA suit
   description: An EVA suit with a built-in helmet commonly issued to pilots.
@@ -1012,7 +1012,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitMercenary
   name: mercenary EVA suit
   description: An EVA suit with a built-in helmet commonly issued to mercenaries.
@@ -1064,7 +1064,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitPrivateSec
   name: private security EVA suit
   description: An EVA suit with a built-in helmet commonly issued to private security.
@@ -1117,7 +1117,7 @@
 
 ## NFSD
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitNfsd
   name: nfsd EVA suit
   description: An EVA suit with a built-in helmet commonly issued to NFSD personnel.
@@ -1170,7 +1170,7 @@
 
 ## PLAYER FACTIONS
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitLvhi
   name: lvhi EVA suit
   description: An EVA suit with a built-in helmet commonly issued to Langstad-Voigt Heavy Industries (LVHI) personnel.
@@ -1228,7 +1228,7 @@
       toggleable-clothing: !type:ContainerSlot {}
 
 - type: entity
-  parent: ClothingOuterEVASuitBaseNF
+  parent: NFClothingOuterEVASuitBase
   id: ClothingOuterEVASuitArcadia
   name: arcadia EVA suit
   description: An EVA suit with a built-in helmet commonly issued to Arcadia Industries personnel.
