Make meatballs cookable again

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
@@ -662,6 +662,11 @@
     - Meat
   - type: Sprite
     state: meatball
+  # Frontier: Cookable meatball. Delicious.
+  - type: Construction
+    graph: meatballNF
+    node: start
+  # End Frontier
 
 - type: entity
   name: slimeball
