--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
@@ -662,11 +662,9 @@
     - Meat
   - type: Sprite
     state: meatball
-  # Frontier: Cookable meatball. Delicious.
-  - type: Construction
-    graph: meatballNF
-    node: start
-  # End Frontier
+  - type: Construction # Frontier: Cookable meatball. Delicious.
+    graph: meatballNF # Frontier: Cookable meatball. Delicious.
+    node: start # Frontier: Cookable meatball. Delicious.
 
 - type: entity
   name: slimeball
