Crafts Medical Pens

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1039,6 +1039,7 @@
       - ClothingOuterHardsuitVoidParamed # Frontier
       - BaseChemistryEmptyVial # Frontier
       - PowerCellSmall # Frontier
+      - BlankMediPen # Frontier
     dynamicRecipes:
       - VialBluespace # Frontier
       - ChemicalPayload
