--- a/Resources/Prototypes/Entities/Markers/Spawners/ghost_roles.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/ghost_roles.yml
@@ -78,6 +78,7 @@
   name: ghost role spawn point
   suffix: nukeops
   parent: MarkerBase
+  categories: [ HideSpawnMenu ] # Frontier
   components:
   - type: GhostRole
     rules: ghost-role-information-rules-default-team-antagonist
@@ -96,6 +97,7 @@
   categories: [ HideSpawnMenu, Spawner ]
   parent: BaseAntagSpawner
   id: SpawnPointLoneNukeOperative
+  categories: [ HideSpawnMenu ] # Frontier
   components:
   - type: GhostRole
     name: ghost-role-information-loneop-name
@@ -112,6 +114,7 @@
   categories: [ HideSpawnMenu, Spawner ]
   parent: SpawnPointLoneNukeOperative
   id: SpawnPointNukeopsCommander
+  categories: [ HideSpawnMenu ] # Frontier
   components:
   - type: GhostRole
     name: roles-antag-nuclear-operative-commander-name
@@ -122,6 +125,7 @@
   categories: [ HideSpawnMenu, Spawner ]
   parent: SpawnPointLoneNukeOperative
   id: SpawnPointNukeopsMedic
+  categories: [ HideSpawnMenu ] # Frontier
   components:
   - type: GhostRole
     name: roles-antag-nuclear-operative-agent-name
@@ -132,6 +136,7 @@
   categories: [ HideSpawnMenu, Spawner ]
   parent: SpawnPointLoneNukeOperative
   id: SpawnPointNukeopsOperative
+  categories: [ HideSpawnMenu ] # Frontier
   components:
   - type: GhostRole
     name: roles-antag-nuclear-operative-name
