--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -31,6 +31,7 @@
   - ShipyardLoader
   - ShipyardMcCargo
   - ShipyardMcDelivery
+  - ShipyardMeteor
   - ShipyardPathfinder
   - ShipyardPioneer
   - ShipyardProspector
@@ -173,6 +174,11 @@
   id: ShipyardMcDelivery
   name: guide-entry-shipyard-mcdelivery
   text: "/ServerInfo/_NF/Guidebook/Shipyard/McDelivery.xml"
+
+- type: guideEntry
+  id: ShipyardMeteor
+  name: guide-entry-shipyard-meteor
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Meteor.xml"
 
 - type: guideEntry
   id: ShipyardPathfinder
