--- a/Resources/Prototypes/_NF/Guidebook/shuttle_maps.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shuttle_maps.yml
@@ -240,6 +240,18 @@
 
 - type: entity
   parent: PosterBase
+  id: ShuttleMapMeteor
+  name: "NT Meteor"
+  description: "Detailed map of a Meteor shuttle."
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    sprite: _NF/Guidebook/shuttle_maps/128x96.rsi
+    state: meteor
+    scale: 1.2, 1.2
+      
+- type: entity
+  parent: PosterBase
   id: ShuttleMapPathfinder
   name: "KC Pathfinder"
   description: "Detailed map of a Pathfinder shuttle."
