Material Arbitrage Fixes

--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/base_turret.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/base_turret.yml
@@ -78,6 +78,8 @@
   - type: Input
     context: "human"
   - type: MobState # Frontier (otherwise NPCs won't attack the entity)
+  - type: StaticPrice
+    price: 1080
 
 - type: entity # A search light for turrets
   id: BaseTurretSearchBeam
